Add filters by created_at field
