# grpc/delivery_handler.go
@@ -112,6 +112,8 @@ func (d *DeliveryHandler) ListDeliveries(ctx context.Context, request *pb.ListDe
 		}
 		findOptions.FindFilters = append(findOptions.FindFilters, statusFilter)
 	}
+	createdAtFilters := createdAtFilters(request.CreatedAtGt, request.CreatedAtGte, request.CreatedAtLt, request.CreatedAtLte)
+	findOptions.FindFilters = append(findOptions.FindFilters, createdAtFilters...)
 	deliveries, err := d.deliveryService.FindAll(findOptions)
 	if err != nil {
 		return response, status.Error(codes.Internal, err.Error())
